Fix projects display on mobile screens

--- a/src/style.styl
+++ b/src/style.styl
@@ -300,6 +300,7 @@ a
 @media screen and (max-width: 660px)
 	.project
 		padding 10px
+		width 305px
 	.portfolio__projects
 		grid-template 1fr/ 1fr
 	.intro
